--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="inprogress.css">
+    <link rel="stylesheet" type="text/css" href="assets/game.css">
    <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
@@ -40,6 +40,6 @@
             </div>
         </div>
     </div>
-    <script src="inprogress.js"></script> 
+    <script src="assets/game.js"></script> 
 </body>
 </html>
