--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/game.css">
    <!--  CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 <!-- Firebase References -->
@@ -23,29 +23,34 @@
     <h1>Rock, Paper, and Scissors!</h1>
 
     <div class="container-fluid" id="instructions">In this game, two players play against each other.<br>
-        <br><br><button id="start">Let's play Rock Paper Scissors!</button></div>
+        <br><br><button id="startPage">Let's play Rock Paper Scissors!</button>
+    </div>
 
-    <div class="container" id="game" style="display: none">
-            <form><input type="text" name="name"><br>
-            Name:<br>
-            <input type="submit" id="toServer" value="Submit">
-          </form>
+    <div class="container-fluid" id="game" style="display: none">
         <div class="row">
-            <div class="col-md-4" id="leftInfo">
-                    <span id="nameOne">Player 1 <br>Score = 0</span>
-                    <div id = "playerOneChoice">Weapon picked</div>
+            <div class="col-md-6" id="leftInfo">
+                    <form><input id="player1-name" type="text" name="name"><br>
+                        Player 1 Name:<br>
+                        <input type="submit" id="toServer" value="Submit">
+                    </form>
+                    <span id="nameOne">Score = 0</span>
+                    <div id = "playerOneChoice">Pick your weapon</div>
+                    <div class="rockDiv1"><button><img src="assets/images/rock image.jpg" alt="Rock" id="rock" width="100" height="100"></button></div>
+                    <div class="paperDiv1"><button><img src="assets/images/paper picture.jfif" alt="Paper" id="paper" width="100" height="100"></button></div>
+                    <div class="scissorsDiv1"><button><img src="assets/images/scissors pic.jpg" id="scissors" alt="Scissors" width="100" height="100"></button></div>
             </div>
-            <div class="col-md-4" id="choices">
-                <div class="rockDiv"><button><img src="assets/images/rock image.jpg" alt="Rock" id="rock" width="25%"></button></div>
-                <div class="paperDiv"><button><img src="assets/images/paper picture.jfif" alt="Paper" id="paper" width="25%"></button></div>
-                <div class="scissorsDiv"><button><img src="assets/images/scissors pic.jpg" id="scissors" alt="Scissors" width="25%"></button></div>
+            
+            <div class="col-md-6" id="rightInfo">
+                    <form><input id="player2-name" type="text" name="name"><br>
+                        Player 2 Name:<br>
+                        <input type="submit" id="toServer" value="Submit">
+                      </form>
+                    <span id="ScoreTwo">Score = 0</span>
+                    <div id="playerTwoChoice">Pick your weapon</div>
+                    <div class="rockDiv2"><button><img src="assets/images/rock image.jpg" alt="Rock" id="rock" width="100" height="100"></button></div>
+                    <div class="paperDiv2"><button><img src="assets/images/paper picture.jfif" alt="Paper" id="paper" width="100" height="100"></button></div>
+                    <div class="scissorsDiv2"><button><img src="assets/images/scissors pic.jpg" id="scissors" alt="Scissors" width="100" height="100"></button></div>
             </div>
-            <div class="col-md-4" id="rightInfo">
-                    <span id="ScoreTwo">Player 2 <br>Score = 0</span>
-                    <div id="playerTwoChoice">Weapon picked</div>
-            </div>
-            <div class="row" id="children"><span>Number of people connected: </span></div>
-        </div>
     </div>
   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
