--- a/index.html
+++ b/index.html
@@ -29,28 +29,27 @@
     <div class="container-fluid" id="game" style="display: none">
         <div class="row">
             <div class="col-md-6" id="leftInfo">
-                    <form><input id="player1-name" type="text" name="name"><br>
-                        Player 1 Name:<br>
+                    <form>Player 1  <input id="name" type="text" name="name"><br>
+                        <div>Pick your weapon</div>
+                        <input type="radio" id="choice" name="weapon" value="rock"> Rock<br>
+                        <input type="radio" id="choice" name="weapon" value="paper"> Paper<br>
+                        <input type="radio" id="choice" name="weapon" value="scissors"> Scissors<br> 
                         <input type="submit" id="toServer" value="Submit">
                     </form>
-                    <span id="nameOne">Score = 0</span>
-                    <div id = "playerOneChoice">Pick your weapon</div>
-                    <div class="rockDiv1"><button><img src="assets/images/rock image.jpg" alt="Rock" id="rock" width="100" height="100"></button></div>
-                    <div class="paperDiv1"><button><img src="assets/images/paper picture.jfif" alt="Paper" id="paper" width="100" height="100"></button></div>
-                    <div class="scissorsDiv1"><button><img src="assets/images/scissors pic.jpg" id="scissors" alt="Scissors" width="100" height="100"></button></div>
-            </div>
+                <div id="scoreOne">Score = 0</div>
+            </div>     
+            
             
             <div class="col-md-6" id="rightInfo">
-                    <form><input id="player2-name" type="text" name="name"><br>
-                        Player 2 Name:<br>
+                    <form>Player 2  <input id="name" type="text" name="name"><br>
+                        <div id="playerTwoChoice">Pick your weapon</div>
+                        <input type="radio" id="choice" name="weapon" value="rock"> Rock<br>
+                        <input type="radio" id="choice" name="weapon" value="paper"> Paper<br>
+                        <input type="radio" id="choice" name="weapon" value="scissors"> Scissors<br> 
                         <input type="submit" id="toServer" value="Submit">
-                      </form>
-                    <span id="ScoreTwo">Score = 0</span>
-                    <div id="playerTwoChoice">Pick your weapon</div>
-                    <div class="rockDiv2"><button><img src="assets/images/rock image.jpg" alt="Rock" id="rock" width="100" height="100"></button></div>
-                    <div class="paperDiv2"><button><img src="assets/images/paper picture.jfif" alt="Paper" id="paper" width="100" height="100"></button></div>
-                    <div class="scissorsDiv2"><button><img src="assets/images/scissors pic.jpg" id="scissors" alt="Scissors" width="100" height="100"></button></div>
-            </div>
+                    </form>
+                <div id="scoreTwo">Score = 0</div>
+            </div>   
     </div>
   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
